<resources>
    <string name="app_name">银行卡支付</string>
    <string name="menu">未知菜单</string>
    <string name="menu_sale">消费</string>
    <string name="menu_balance">余额查询</string>
    <string name="menu_void">消费撤销</string>
    <string name="menu_refund">退货</string>
    <string name="menu_auth">预授权</string>
    <string name="menu_auth_complete">预授权完成</string>
    <string name="menu_auth_settlement">预授权完成（通知）</string>
    <string name="menu_cancel">预授权撤销</string>
    <string name="menu_complete_void">预授权完成撤销</string>
    <string name="menu_print">打印</string>
    <string name="menu_print_last">重打最后一笔</string>
    <string name="menu_print_any">重打任意一笔</string>
    <string name="menu_print_detail">打印交易明细</string>
    <string name="menu_print_summary">打印交易汇总</string>
    <string name="menu_print_batch_summary">打印上批总计</string>
    <string name="menu_manage">管理</string>
    <string name="menu_other">其它</string>
    <string name="e_quick">快速支付</string>
    <string name="e_common">普通支付</string>
    <string name="e_load">圈存</string>
    <string name="e_unload">圈提</string>
    <string name="e_balance">余额查询</string>
    <string name="e_refund">脱机退货</string>
    <string name="ec_trans_records">明细查询</string>
    <string name="e_quick_en">EC SALE</string>
    <string name="e_common_en">EC SALE</string>
    <string name="e_load_en">EC LOAD</string>
    <string name="e_balance_en">EC BALANCE</string>
    <string name="e_refund_en">EC REFUND</string>
    <string name="ec_trans_records_en">QUERY</string>
    <string name="ec_load_cash">现金充值</string>
    <string name="ec_load_inner">指定账户圈存</string>
    <string name="ec_load_outer">非指定账户圈存</string>
    <string name="ec_void_cash_load">现金充值撤销</string>
    <string name="ec_load_records">电子现金圈存日志</string>
    <string name="ec_load_cash_en">EC LOAD</string>
    <string name="ec_load_inner_en">EC LOAD</string>
    <string name="ec_load_outer_en">EC LOAD</string>
    <string name="ec_void_cash_load_en">EC LOAD VOID</string>
    <string name="title_factory_mode">出厂设置</string>
    <string name="title_input_money">输入金额</string>
    <string name="title_input_info">输入原交易信息</string>
    <string name="title_input_pos_serial">输入凭证号</string>
    <string name="title_input_pwd">输入密码</string>
    <string name="title_check_card">请读卡</string>
    <string name="title_result">交易结果</string>
    <string name="title_input_director_pwd">主管密码</string>
    <string name="title_input_admin_pwd">系统管理员密码</string>
    <string name="title_origin_trade_info">原始交易信息</string>
    <string name="title_query_trade">交易查询</string>
    <string name="title_trade_summary">交易汇总</string>
    <string name="title_trade_detail">交易详情</string>
    <string name="title_trade_down">交易已完成，请签名</string>
    <string name="title_upload_log">日志上传</string>
    <string name="tip_remove_contact_card">读卡成功,请拔卡</string>
    <string name="tip_function_undefined">功能未定义</string>
    <string name="tip_network_unavailable">网络未连接，请检查！</string>
    <string name="tip_menu_undefined">菜单未定义</string>
    <string name="tip_process_undefined">开发中，敬请期待！</string>
    <string name="tip_menu_init_failed">菜单初始化失败</string>
    <string name="tip_device_not_ready">终端未就绪，请稍候或重启</string>
    <string name="tip_card_retry_limited">读卡次数已超限</string>
    <string name="tip_read_card_timeout">读卡超时</string>
    <string name="tip_input_pwd_timeout">输密超时</string>
    <string name="tip_read_card_failed">读卡失败，请重试或使用其它卡片</string>
    <string name="tip_read_card_failed2">读卡失败，请重试或使用其它卡片</string>
    <string name="tip_read_card_failed3">读卡失败，请使用其它卡片</string>
    <string name="tip_read_card_failed4">挥卡金额超限，请使用插卡方式</string>
    <string name="tip_goto_prestep_unenable">上一步骤不支持重复执行</string>
    <string name="tip_prestep_not_exist">上一个步骤不存在</string>
    <string name="tip_force_ic">请插卡或挥卡</string>
    <string name="tip_force_clss">请挥卡</string>
    <string name="tip_force_insert_ic">请插入IC卡</string>
    <string name="tip_if_load_tmk">是否进行主密钥下载？</string>
    <string name="tip_load_tmk_success">下载主密钥成功</string>
    <string name="tip_load_tmk_failed">下载主密钥失败！</string>
    <string name="tip_terminal_init_success">终端初始化成功</string>
    <string name="tip_terminal_init_failed">终端初始化失败！</string>
    <string name="tip_upload_esign_success">上传电子签名成功</string>
    <string name="tip_upload_esign_failed">上传电子签名失败！</string>
    <string name="tip_load_capk_success">下载IC卡公钥成功</string>
    <string name="tip_load_capk_failed">下载IC卡公钥失败！</string>
    <string name="tip_load_aid_success">下载IC卡参数成功</string>
    <string name="tip_load_aid_failed">下载IC卡参数失败！</string>
    <string name="tip_load_clss_params_success">下载非接参数成功</string>
    <string name="tip_load_clss_params_failed">下载非接参数失败！</string>
    <string name="tip_load_card_bin_success">下载卡BIN参数成功</string>
    <string name="tip_load_card_bin_failed">下载卡BIN参数失败！</string>
    <string name="tip_trade_success">交易成功</string>
    <string name="tip_trade_success2">交易成功！</string>
    <string name="tip_trade_failed">交易失败</string>
    <string name="tip_trade_failed2">交易失败！</string>
    <string name="tip_trade_refused">交易拒绝</string>
    <string name="tip_card_interaction_failed">卡片交互失败，请重试</string>
    <string name="tip_trade_fallback">交易降级，请刷卡</string>
    <string name="tip_trade_fallback2">交易降级，请重试</string>
    <string name="tip_sign_in_success">签到成功</string>
    <string name="tip_sign_in_failed">签到失败！</string>
    <string name="tip_old_pwd_empty">旧密码为空</string>
    <string name="tip_new_pwd_empty">新密码为空</string>
    <string name="tip_renew_pwd_empty">确认新密码为空</string>
    <string name="tip_pwd_not_same">前后两次输入的新密码不一致</string>
    <string name="tip_pwd_suc">修改密码成功</string>
    <string name="tip_pwd_old_pwd_error">旧密码有误</string>
    <string name="tip_please_input_opt_no">请输入正确的操作员号</string>
    <string name="tip_opt_no_limit">操作员号只能在01～98之间</string>
    <string name="tip_please_input_opt_pwd">请输入正确的操作员密码</string>
    <string name="tip_opt_pwd_not_same">两次密码输入不一致</string>
    <string name="tip_opt_create_suc">新建成功</string>
    <string name="tip_opt_create_failure">新建失败</string>
    <string name="tip_opt_exsit">操作员已存在！</string>
    <string name="tip_opt_update_suc">修改成功</string>
    <string name="tip_opt_update_failure">修改失败</string>
    <string name="tip_opt_delete_suc">删除成功</string>
    <string name="tip_opt_delete_failure">删除失败</string>
    <string name="tip_opt_not_exsit">操作员不存在</string>
    <string name="tip_sign_in_again">终端信息更新，请重新签到</string>
    <string name="tip_download_tmk">请下载主密钥</string>
    <string name="tip_pakcage_msg_error">组包异常</string>
    <string name="tip_ic_data_error">IC卡数据处理异常</string>
    <string name="tip_amount_get_error">金额获取异常</string>
    <string name="tip_user_cancel">用户取消</string>
    <string name="prue_plz_select_rc_trans">纯电子现金卡，请选择电子现金交易</string>
    <string name="tip_auth_amount_prue_ec">授权交易不可使用纯电子现金</string>
    <string name="tip_sign_in_before_trading">请签到后再做交易</string>
    <string name="tip_please_input_account">请输入正确的账号</string>
    <string name="tip_account_not_exist">操作员不存在</string>
    <string name="tip_login_pwd_error">密码出错，请重新输入！</string>
    <string name="tip_login_admin_suc">系统管理员,登录成功!</string>
    <string name="tip_login_msn_suc">主管操作员,登录成功!</string>
    <string name="tip_login_opt_suc">操作员登录成功!</string>
    <string name="tip_login_to_down">请登录主管操作员进行密钥下载!</string>
    <string name="tip_down_tmk">请先获取主密钥!</string>
    <string name="tip_mac_verify_failed">MAC校验失败!</string>
    <string name="tip_pin_timeout">输入密码超时!</string>
    <string name="tip_input_money">请输入金额：</string>
    <string name="tip_input_money2">请输入金额</string>
    <string name="tip_no_pwd">无密码请直接点击确定</string>
    <string name="tip_on_reversing">冲正中，请稍候&#8230;</string>
    <string name="tip_reverse_success">冲正成功，请重新交易</string>
    <string name="tip_input_director_pwd">请输入主管密码：</string>
    <string name="tip_input_admin_pwd">请输入系统管理员密码：</string>
    <string name="tip_confirm_origin_info">请确认原始交易信息</string>
    <string name="tip_refund_over_limited">退货金额超出上限</string>
    <string name="tip_no_trade_info">暂无交易流水！</string>
    <string name="tip_no_more_trade_info">无更多交易流水</string>
    <string name="tip_cannot_query_the_trade">无法查找到对应流水！</string>
    <string name="tip_has_bean_void">该流水已撤销！</string>
    <string name="tip_ic_on_processing">IC卡处理中，请勿拔卡！</string>
    <string name="tip_ic_Read_processing">正在读取卡信息，请勿拔卡&#8230;</string>
    <string name="tip_dialog_title">失败</string>
    <string name="tip_send_data_fail">数据批上送失败，是否重新上送？</string>
    <string name="tip_comfirm_batch">确认进行结算？</string>
    <string name="tip_clear_trans_data">确认清除交易数据？</string>
    <string name="tip_clear_reverse_data">确认冲正信息数据？</string>
    <string name="tip_clear_data_over">交易流水已清空！</string>
    <string name="tip_clear_data_error">清空失败,请重试！</string>
    <string name="tip_clear_reverse_over">冲正信息已清空！</string>
    <string name="tip_clear_reverse_error">清空冲正信息，请重试！</string>
    <string name="tip_batch_down_fail">批上送完成请求失败，是否重新请求？</string>
    <string name="tip_batch_fail">批结算请求失败，是否重新上送？</string>
    <string name="tip_sign_out_fail">签退请求失败，请重新手动签退</string>
    <string name="tip_batch_over_please_sign_out">已完成批结算，请手动签退!</string>
    <string name="tip_can_not_modify">非签退状态，不能修改系统参数!</string>
    <string name="tip_batch_fail_please_continue">结算中断，请继续结算！</string>
    <string name="tip_no_trans_flow">目前没有需上送流水，无需结算!</string>
    <string name="tip_query_flow">正在查询终端交易流水……</string>
    <string name="tip_import_parameter">正在导入终端参数……</string>
    <string name="tip_no_sign_in_status">未签到状态!</string>
    <string name="tip_no_pre_batch_total">未生成上批次总计数据</string>
    <string name="tip_print_next">点击“确定”继续打印下一联</string>
    <string name="tip_notification">提示</string>
    <string name="tip_sign">请签名</string>
    <string name="tip_input_phone">请输入电话号码</string>
    <string name="tips_nosdcard">SD卡已卸载，无法进行电子签名！</string>
    <string name="tips_errorwhilesigning">在保存签名时出错</string>
    <string name="tip_input_phone_number">请输入手机号码</string>
    <string name="tip_plz_input_reservation_number">请输入预约号码</string>
    <string name="label_esign_open">支持电子签名：</string>
    <string name="label_esign_multi_package">开启分包功能：</string>
    <string name="label_esign_package_max">数据包大小：</string>
    <string name="label_signpad_inner">签名板内置：</string>
    <string name="label_esign_phone_num">输入手机号码：</string>
    <string name="label_sign_timeout">签字输入超时时间：</string>
    <string name="label_request_time_max">批量请求重发次数：</string>
    <string name="label_esign_store_max">签名信息最大笔数：</string>
    <string name="label_trans_type2">交易类型</string>
    <string name="label_trans_amt2">交易金额</string>
    <string name="label_pos_serial">凭证号</string>
    <string name="pls_input_goods_code">请输入商品项目编码</string>
    <string name="tip_id_id"> 身份证</string>
    <string name="tip_id_coo"> 军官证</string>
    <string name="tip_id_passport"> 护照</string>
    <string name="tip_id_rp"> 回乡证</string>
    <string name="tip_id_mtp"> 台胞证</string>
    <string name="tip_id_poc"> 警官证</string>
    <string name="tip_id_sc"> 士兵证</string>
    <string name="label_cert_type">请选择证件类别</string>
    <string name="label_auth_mode">请选授权方式</string>
    <string name="label_plz_input_cert_no">请输入证件编号</string>
    <string name="tip_auth_mode_pos">POS</string>
    <string name="tip_auth_mode_telephone">电话</string>
    <string name="tip_auth_mode_auth">小额代授权</string>
    <string name="label_plz_select_credit_card_company_code">选择国际信用卡公司代码</string>
    <string name="label_plz_input_ori_auth_code">请输入原授权码</string>
    <string name="label_plz_input_auth_organization_code">提示输入授权机构代码</string>
    <string name="tip_credit_card_company_code_cup">CUP</string>
    <string name="tip_credit_card_company_code_vis">VIS</string>
    <string name="tip_credit_card_company_code_mcc">MCC</string>
    <string name="tip_credit_card_company_code_mae">MAE</string>
    <string name="tip_credit_card_company_code_jcb">JCB</string>
    <string name="tip_credit_card_company_code_dcc">DCC</string>
    <string name="tip_credit_card_company_code_amx">AMX</string>
</resources>